# BeadWatch

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
beadwatch/: beadwatch.spec  main.py  pyi_rth_crashhandler.py
beadwatch/api/controllers/: config_controller.py  dashboard_controller.py
beadwatch/config/: settings.py
beadwatch/database/: repositories.py  sqlite_handler.py  sqlserver_handler.py
beadwatch/database/init_scripts/: create_normalized_db.sql
beadwatch/frontend/: disclaimer.html  home.html  index.html  instruments.html  operators.html  settings.html  setup.html
beadwatch/frontend/static/css/: styles.css
beadwatch/frontend/static/js/: chart-plugins.js  dashboard.js  home.js  setup.js  (+3 more)
beadwatch/models/: config_models.py  data_models.py
beadwatch/services/: application_bootstrap.py  cache_refresh_service.py  config_query_service.py  dashboard_query_service.py  metrics_calculator.py  polling_service.py  qc_catalog.py  record_ingestion_service.py  rolling_stats_service.py  runtime_services.py  startup.py
beadwatch/services/vendor_adapters/: base_adapter.py  fusion_adapter.py  mock_adapter.py  vendor_a_adapter.py
beadwatch/tests/: conftest.py  test_cache.py  test_cache_sync.py  test_config_controller.py  test_dashboard_controller.py  test_dashboard_invariants.py  test_encryption.py  test_frontend_wiring.py  test_metrics_calculator.py  test_polling_invariants.py  test_polling_service.py  test_sqlite_handler.py  test_startup_invariants.py  test_vendor_adapters.py
beadwatch/utils/: cache.py  encryption.py  logger.py  port_finder.py
